--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
-pytest
-chlorophyll>=0.4.2
+# GUI Framework
+PyQt6==6.6.0
+
+# Syntax Highlighting
+Pygments==2.17.2
+
+# Development Dependencies
+pytest==7.4.4
+black==23.12.1
+flake8==7.0.0
+mypy==1.8.0
