feat: modernize project with comprehensive Python best practices - Complete project modernization with 2024/2025 Python best practices including pyproject.toml, modern src/ layout, Ruff linting, MyPy typing, Sphinx docs with Google-style docstrings, GitHub Actions CI/CD, security scanning, performance benchmarking, VS Code integration, and comprehensive development tooling. Ready for epic VIBE CODER development!

--- a/.env_example
+++ b/.env_example
@@ -1,4 +1,20 @@
+# Example environment variables for My Coding Agent
+# Copy this file to .env and customize for your environment
+
+# Agent API Configuration (for future agent integration)
 API_VERSION=
 ENDPOINT=
 API_KEY=
 MODEL=
+
+# Application settings
+DEBUG=true
+LOG_LEVEL=info
+
+# Development settings
+PYTHONPATH=src
+PYTHON_ENV=development
+
+# GUI settings (when implemented)
+THEME=dark
+WINDOW_SIZE=1200x800
