--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,15 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/build/
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+*.py,cover
 
 # PyBuilder
 .pybuilder/
