🔧 Fix pre-commit hooks to exclude auto-generated _version.py - Remove always_run and pass_filenames to make exclude patterns work - Prevents CI failures when setuptools_scm updates version during build - Fixes issue where ruff tried to format auto-generated version file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,16 +6,14 @@ repos:
         entry: ruff format
         language: system
         types: [python]
-        pass_filenames: false
-        always_run: true
+        exclude: ^src/my_coding_agent/_version\.py$
 
       - id: ruff-check
         name: ruff-check
         entry: ruff check --fix
         language: system
         types: [python]
-        pass_filenames: false
-        always_run: true
+        exclude: ^src/my_coding_agent/_version\.py$
 
       # TODO: Enable MyPy after adding comprehensive type annotations
       # - id: mypy
