--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y \
-          libegl1-mesa \
+          libegl1 \
           libxkbcommon-x11-0 \
           libxcb-icccm4 \
           libxcb-image0 \
@@ -35,6 +35,9 @@ jobs:
           libxcb-xinerama0 \
           libfontconfig1 \
           libxcb-xfixes0 \
+          libxcb-cursor0 \
+          libgl1-mesa-glx \
+          libglib2.0-0 \
           xvfb
 
     - name: Install dependencies
