Fix OpenGL package name: replace libgl1-mesa-glx with libgl1-mesa-dri for Ubuntu 24.04

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
           libfontconfig1 \
           libxcb-xfixes0 \
           libxcb-cursor0 \
-          libgl1-mesa-glx \
+          libgl1-mesa-dri \
           libglib2.0-0 \
           xvfb
 
