--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,6 +30,10 @@
         88
     ],
     "python.analysis.typeCheckingMode": "strict",
+    "python.analysis.diagnosticSeverityOverrides": {
+        "reportUnknownMemberType": "none",
+        "reportUnknownArgumentType": "none"
+    },
     // GitHub Actions integration
     "github-actions.workflows.pinned.workflows": [
         ".github/workflows/ci.yml",
