--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,9 @@ name = "my-coding-agent"
 dynamic = ["version"]
 description = "A clean, fast code viewing application with syntax highlighting"
 readme = "README.md"
-license = {file = "LICENSE"}
-authors = [
-    {name = "Randy", email = "randy.herritt@gmail.com"}
-]
-maintainers = [
-    {name = "Randy", email = "randy.herritt@gmail.com"}
-]
+license = { file = "LICENSE" }
+authors = [{ name = "Randy", email = "randy.herritt@gmail.com" }]
+maintainers = [{ name = "Randy", email = "randy.herritt@gmail.com" }]
 keywords = ["code", "viewer", "syntax", "highlighting", "gui"]
 classifiers = [
     "Development Status :: 3 - Alpha",
@@ -31,36 +27,33 @@ classifiers = [
     "Natural Language :: English",
 ]
 requires-python = ">=3.8"
-dependencies = [
-    "PyQt6>=6.6.0",
-    "Pygments>=2.17.2",
-]
+dependencies = ["PyQt6>=6.6.0", "Pygments>=2.17.2"]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-mock>=3.0",
-    "pytest-benchmark>=4.0.0",  # Performance benchmarking
-    "pytest-profiling>=1.7.0",  # Code profiling
-    "pytest-memray>=1.0.0",  # Memory profiling
+    "pytest-benchmark>=4.0.0", # Performance benchmarking
+    "pytest-profiling>=1.7.0", # Code profiling
+    "pytest-memray>=1.0.0",    # Memory profiling
     "ruff>=0.1.0",
     "mypy>=1.0",
     "pre-commit>=3.0",
     "build>=1.0",
     "twine>=4.0",
-    "pydocstyle>=6.3.0",  # Docstring style checking
-    "bandit>=1.7.0",  # Security linting
-    "safety>=3.0.0",  # Dependency vulnerability scanning
-    "pip-audit>=2.6.0",  # Alternative dependency scanner
+    "pydocstyle>=6.3.0",       # Docstring style checking
+    "bandit>=1.7.0",           # Security linting
+    "safety>=3.0.0",           # Dependency vulnerability scanning
+    "pip-audit>=2.6.0",        # Alternative dependency scanner
 ]
 test = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-mock>=3.0",
-    "pytest-benchmark>=4.0.0",  # Performance benchmarking
-    "pytest-profiling>=1.7.0",  # Code profiling
-    "pytest-memray>=1.0.0",  # Memory profiling
+    "pytest-benchmark>=4.0.0", # Performance benchmarking
+    "pytest-profiling>=1.7.0", # Code profiling
+    "pytest-memray>=1.0.0",    # Memory profiling
 ]
 docs = [
     "sphinx>=7.0",
@@ -69,13 +62,12 @@ docs = [
     "myst-parser>=2.0",
     "sphinx-copybutton>=0.5",
     "sphinx-autoapi>=3.0",
-    "furo>=2023.9.10",  # Modern Sphinx theme
+    "furo>=2023.9.10",                # Modern Sphinx theme
 ]
 
 [project.urls]
 Repository = "https://github.com/thepeacefulprogrammer/my_coding_agent"
 "Bug Tracker" = "https://github.com/thepeacefulprogrammer/my_coding_agent/issues"
-
 
 
 # Setuptools configuration
@@ -115,16 +107,16 @@ target-version = "py38"
 
 [tool.ruff.lint]
 select = [
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # pyflakes
-    "UP", # pyupgrade
-    "B",  # flake8-bugbear
+    "E",   # pycodestyle errors
+    "W",   # pycodestyle warnings
+    "F",   # pyflakes
+    "UP",  # pyupgrade
+    "B",   # flake8-bugbear
     "SIM", # flake8-simplify
-    "I",  # isort
+    "I",   # isort
 ]
 ignore = [
-    "E501",  # line too long, handled by black
+    "E501", # line too long, handled by black
 ]
 
 [tool.ruff.lint.per-file-ignores]
@@ -146,11 +138,7 @@ warn_unused_ignores = true
 warn_no_return = true
 warn_unreachable = true
 strict_equality = true
-exclude = [
-    "venv/",
-    "build/",
-    "dist/",
-]
+exclude = ["venv/", "build/", "dist/"]
 
 [[tool.mypy.overrides]]
 module = "tests.*"
@@ -174,11 +162,7 @@ markers = [
 [tool.coverage.run]
 source = ["src"]
 branch = true
-omit = [
-    "*/tests/*",
-    "*/test_*",
-    "*/conftest.py",
-]
+omit = ["*/tests/*", "*/test_*", "*/conftest.py"]
 
 [tool.coverage.report]
 exclude_lines = [
@@ -196,15 +180,18 @@ exclude_lines = [
 
 [tool.pydocstyle]
 convention = "google"
-add-ignore = ["D100", "D104"]  # Missing docstring in public module/package
-match-dir = "(?!tests).*"  # Don't check test files
+add-ignore = ["D100", "D104"] # Missing docstring in public module/package
+match-dir = "(?!tests).*"     # Don't check test files
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
 [tool.bandit]
 exclude_dirs = ["tests", "venv", ".venv"]
-skips = ["B101", "B601"]  # Skip assert_used and shell_injection_subprocess (can be noisy)
+skips = [
+    "B101",
+    "B601",
+] # Skip assert_used and shell_injection_subprocess (can be noisy)
 
 [tool.bandit.any_other_function_with_shell_equals_true]
 no_shell = [
@@ -219,3 +206,15 @@ no_shell = [
     "os.spawnl",
     "os.spawnle",
 ]
+
+# Pylance/Pyright configuration
+[tool.pyright]
+include = ["src"]
+exclude = ["venv", "build", "dist", "**/__pycache__", "tests"]
+reportUnknownMemberType = "none"                               # Ignore PyQt6 incomplete type stubs
+reportUnknownArgumentType = "none"                             # Ignore QSettings unknown argument types
+reportGeneralTypeIssues = "warning"                            # Keep other type checking
+pythonVersion = "3.8"
+typeCheckingMode = "standard"
+
+# Pydocstyle configuration
