Add pytest-qt dependency for CI environment - Add pytest-qt>=4.0.0 to both dev and test dependencies - Fixes missing qtbot fixture in CI that was causing 12 test errors - All GUI tests now work in both local and CI environments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-mock>=3.0",
+    "pytest-qt>=4.0.0",        # PyQt6 testing support
     "pytest-benchmark>=4.0.0", # Performance benchmarking
     "pytest-profiling>=1.7.0", # Code profiling
     "pytest-memray>=1.0.0",    # Memory profiling
@@ -51,6 +52,7 @@ test = [
     "pytest>=7.0",
     "pytest-cov>=4.0",
     "pytest-mock>=3.0",
+    "pytest-qt>=4.0.0",        # PyQt6 testing support
     "pytest-benchmark>=4.0.0", # Performance benchmarking
     "pytest-profiling>=1.7.0", # Code profiling
     "pytest-memray>=1.0.0",    # Memory profiling
