--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ classifiers = [
     "Natural Language :: English",
 ]
 requires-python = ">=3.8"
-dependencies = ["PyQt6>=6.6.0", "Pygments>=2.17.2"]
+dependencies = ["PyQt6>=6.6.0", "Pygments>=2.17.2", "QtAwesome>=1.3.0"]
 
 [project.optional-dependencies]
 dev = [
