Fix chat widget tests - achieve 100% test pass rate

--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,16 @@
 # Example environment variables for My Coding Agent
 # Copy this file to .env and customize for your environment
 
-# Agent API Configuration (for future agent integration)
-API_VERSION=
-ENDPOINT=
-API_KEY=
-MODEL=
+# Azure OpenAI Configuration for AI Agent
+AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
+AZURE_OPENAI_API_KEY=your-azure-openai-api-key-here
+AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
+AZURE_OPENAI_API_VERSION=2024-02-15-preview
+
+# AI Agent Configuration
+AI_MAX_TOKENS=2000
+AI_TEMPERATURE=0.7
+AI_REQUEST_TIMEOUT=30
 
 # Application settings
 DEBUG=true
