--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,15 @@ classifiers = [
     "Natural Language :: English",
 ]
 requires-python = ">=3.8"
-dependencies = ["PyQt6>=6.6.0", "Pygments>=2.17.2", "QtAwesome>=1.3.0"]
+dependencies = [
+    "PyQt6>=6.6.0",
+    "Pygments>=2.17.2",
+    "QtAwesome>=1.3.0",
+    "pydantic-ai>=0.0.14",
+    "openai>=1.54.0",
+    "mcp>=1.0.0",
+    "python-dotenv>=1.0.0",
+]
 
 [project.optional-dependencies]
 dev = [
