--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
+    "pytest-asyncio>=0.21.0",  # Async test support
     "pytest-cov>=4.0",
     "pytest-mock>=3.0",
     "pytest-qt>=4.0.0",        # PyQt6 testing support
@@ -56,6 +57,7 @@ dev = [
 ]
 test = [
     "pytest>=7.0",
+    "pytest-asyncio>=0.21.0",  # Async test support
     "pytest-cov>=4.0",
     "pytest-mock>=3.0",
     "pytest-qt>=4.0.0",        # PyQt6 testing support
@@ -160,6 +162,7 @@ testpaths = ["tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+asyncio_mode = "auto"
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "integration: marks tests as integration tests",
