Fix message bubble layout: prevent timestamp/status overlap with text - Add proper spacing between content and timestamp/status info - Set fixed size policies for timestamp and status labels - Add stretching to align timestamps based on message type (user vs AI) - Fix test failures by updating environment variable names from AZURE_OPENAI_* to user's convention (ENDPOINT, API_KEY, MODEL) - All 562 tests passing

--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,11 @@
-# Example environment variables for My Coding Agent
-# Copy this file to .env and customize for your environment
+API_VERSION=
+ENDPOINT=
+API_KEY=
+MODEL=
+GITHUB_TOKEN=
 
-# Azure OpenAI Configuration for AI Agent
-AZURE_OPENAI_ENDPOINT=https://your-resource-name.openai.azure.com/
-AZURE_OPENAI_API_KEY=your-azure-openai-api-key-here
-AZURE_OPENAI_DEPLOYMENT_NAME=your-deployment-name
-AZURE_OPENAI_API_VERSION=2024-02-15-preview
+EMBEDDINGS_MODEL=text-embedding-3-large
+EMBEDDINGS_API_VERSION=2024-12-01-preview
 
 # AI Agent Configuration
 AI_MAX_TOKENS=2000
