Fix MainWindow test failures and add pytest to precommit hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,6 +15,13 @@ repos:
         types: [python]
         exclude: ^src/my_coding_agent/_version\.py$
 
+      - id: pytest
+        name: pytest
+        entry: python -m pytest tests/unit/ -n auto -q --tb=line
+        language: system
+        pass_filenames: false
+        always_run: true
+
       # TODO: Enable MyPy after adding comprehensive type annotations
       # - id: mypy
       #   name: mypy
