--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,7 +17,7 @@ repos:
 
       - id: pytest
         name: pytest
-        entry: python -m pytest tests/unit/ -n auto -q --tb=line
+        entry: python -m pytest tests/unit/ -q --tb=line
         language: system
         pass_filenames: false
         always_run: true
