--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,12 +17,12 @@ repos:
 
       # Temporarily disabled pytest hook while fixing remaining test failures
       # TODO: Re-enable after fixing all test failures
-      # - id: pytest
-      #   name: pytest
-      #   entry: python -m pytest tests/unit/ -q --tb=line
-      #   language: system
-      #   pass_filenames: false
-      #   always_run: true
+      - id: pytest
+        name: pytest
+        entry: python -m pytest tests/unit/ -q --tb=line
+        language: system
+        pass_filenames: false
+        always_run: true
 
       # TODO: Enable MyPy after adding comprehensive type annotations
       # - id: mypy
