--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,12 @@ dependencies = [
     "mcp>=1.0.0",
     "python-dotenv>=1.0.0",
     "crawl4ai>=0.6.0",
+    "numpy>=1.24.0",
+    "scikit-learn>=1.3.0",
+    "azure-ai-openai>=1.0.0",
+    "chromadb>=0.4.0",
+    "sentence-transformers>=2.2.0",
+    "more-itertools>=9.0.0",
 ]
 
 [project.optional-dependencies]
