--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ dependencies = [
     "crawl4ai>=0.6.0",
     "numpy>=1.24.0",
     "scikit-learn>=1.3.0",
-    "azure-ai-openai>=1.0.0",
+    "azure-openai>=1.0.0",
     "chromadb>=0.4.0",
     "sentence-transformers>=2.2.0",
     "more-itertools>=9.0.0",
