--- a/.gitignore
+++ b/.gitignore
@@ -201,3 +201,6 @@ cython_debug/
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
 .cursorindexingignore
+
+# Project history archive files (should be in ~/.config but just in case)
+project_history_archive_*.json
