--- a/pytest.ini
+++ b/pytest.ini
@@ -3,3 +3,14 @@ testpaths = tests
 python_files = test_*.py
 python_functions = test_*
 asyncio_mode = auto
+markers =
+    integration: marks tests as integration tests (run with full dependencies)
+    fast: marks tests as fast tests that should run quickly
+    slow: marks tests as slow tests that may take longer to complete
+filterwarnings =
+    # Ignore external dependency warnings that we can't fix
+    ignore:Support for class-based.*config.*is deprecated:pydantic.warnings.PydanticDeprecatedSince20
+    ignore:Direct api_key configuration will not be persisted:DeprecationWarning:chromadb.*
+    ignore:legacy embedding function config:DeprecationWarning:chromadb.*
+    ignore:waitForWindowShown is deprecated:DeprecationWarning:pytestqt.*
+    # Keep our own warnings visible - don't add filters for our src code
