fix: resolve all pre-commit hook issues and improve code quality - Remove duplicate methods, add type annotations, fix code style issues, remove unused variables, format code. All pre-commit hooks now pass.

--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,8 @@ markers =
     integration: marks tests as integration tests (run with full dependencies)
     fast: marks tests as fast tests that should run quickly
     slow: marks tests as slow tests that may take longer to complete
+    qt: marks tests as Qt GUI tests that should not be run in parallel
+    no_parallel: marks tests to run sequentially, not in parallel
 filterwarnings =
     # Ignore external dependency warnings that we can't fix
     ignore:Support for class-based.*config.*is deprecated:pydantic.warnings.PydanticDeprecatedSince20
