fix: Resolve CI failure on Python 3.11 with separate pre-commit config
- Created .pre-commit-config-ci.yaml for CI with check-only mode
- Fixed import formatting conflicts between ruff and isort
- CI now checks without modifying files (preventing exit code 1)
- All pre-commit hooks pass: formatting, linting, tests, import validation
- Maintains local development hooks that auto-fix issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       if: matrix.python-version == '3.11'
       run: |
         pip install pre-commit
-        pre-commit run --all-files
+        pre-commit run --all-files --config .pre-commit-config-ci.yaml
 
     # TODO: Enable type checking after adding comprehensive type annotations
     # - name: Run type checking
